--- a/TP3_correction.html
+++ b/TP3_correction.html
@@ -303,7 +303,14 @@ for (i in 1:nrow(data)){
       }
     }
   }
-}</code></pre>
+}
+
+## Autre méthode : avec which
+data$saison3 &lt;- rep(NA, nrow(data))
+data$saison3[which(data$date&lt;=&quot;2018-06-20&quot;&amp;data$date&gt;=&quot;2018-03-20&quot;)] &lt;- &quot;printemps&quot;
+data$saison3[which(data$date&lt;=&quot;2018-09-21&quot;&amp;data$date&gt;=&quot;2018-06-21&quot;)] &lt;- &quot;ete&quot;
+data$saison3[which(data$date&lt;=&quot;2018-12-20&quot;&amp;data$date&gt;=&quot;2018-09-22&quot;)] &lt;- &quot;automne&quot;
+data$saison3[which(is.na(data$saison3))] &lt;- &quot;hiver&quot;</code></pre>
 <ol start="8" style="list-style-type: decimal">
 <li>Créer une variable <code>age</code> indiquant l’âge des usagers au moment de l’accident</li>
 </ol>
